# autil

./: .gitignore  Autil-plan.md  README.md  pyproject.toml
.beads/: metadata.json
autil/: __init__.py  analyzer.py  audio_loader.py  cli.py  loudness.py  segments.py  silence.py  viz.py
tests/: conftest.py  test_analyzer.py  test_audio_loader.py  test_cli.py  test_loudness.py  test_segments.py  test_silence.py  test_viz.py
