[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autil"
version = "0.1.0"
description = "Audio Utilities - CLI-first audio analysis tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "autil", email = "dev@autil.local"}
]
keywords = ["audio", "fingerprint", "loudness", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "soundfile>=0.12.0",
    "audioread>=3.0.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pyloudnorm>=0.1.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
autil = "autil.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autil*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
